public class EmployeeCard {

    private Employee employee;

    public EmployeeCard(Employee employee) {
        this.employee = employee;
    }

    public Employee getEmployee() {
        return employee;
    }
}
